--- a/EcommerceEcoville/Views/Shared/_Layout.cshtml
+++ b/EcommerceEcoville/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
 </head>
 <body>
     @* Barra de navegação *@
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">
             Ecommerce Ecoville
         </a>
