Classes Usuario e Endereco criada. Validação API CEP implementada

--- a/EcommerceEcoville/Views/Produto/Cadastrar.cshtml
+++ b/EcommerceEcoville/Views/Produto/Cadastrar.cshtml
@@ -40,7 +40,7 @@
                         <option> -- SELECIONE -- </option>
                     </select>
                 </div>
-                <input type="submit" class="btn btn-success"
+                <input type="submit" class="btn btn-outline-success"
                        value="Cadastrar" />
             </fieldset>
         </form>
