--- a/EcommerceEcoville/Views/Categoria/Index.cshtml
+++ b/EcommerceEcoville/Views/Categoria/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Index</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-outline-success">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -25,9 +25,9 @@
                 @Html.DisplayFor(modelItem => item.Nome)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.CategoriaId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CategoriaId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CategoriaId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.CategoriaId" class="btn btn-outline-success">Edit</a>
+                <a asp-action="Details" asp-route-id="@item.CategoriaId" class="btn btn-outline-success">Details</a>
+                <a asp-action="Delete" asp-route-id="@item.CategoriaId" class="btn btn-outline-success">Delete</a>
             </td>
         </tr>
 }
