--- a/EcommerceEcoville/Views/Shared/_Layout.cshtml
+++ b/EcommerceEcoville/Views/Shared/_Layout.cshtml
@@ -12,6 +12,19 @@
         <a class="navbar-brand" href="#">
             Ecommerce Ecoville
         </a>
+        <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" asp-area="" asp-controller="Produto" asp-action="Index">Produto</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" asp-area="" asp-controller="Categoria" asp-action="Index">Categoria</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" asp-area="" asp-controller="Usuario" asp-action="Cadastrar">Usuario</a>
+                </li>
+            </ul>
+        </div>
     </nav>
     @* Conteúdo *@
     <div class="m-5">
@@ -20,9 +33,9 @@
     @* Rodapé *@
     <hr />
     <footer>
-        <p style="text-align:center">
+        <p style="text-align:center; margin-top:auto">
             &copy; @DateTime.Now.Year - Desenvolvido por
-            Diogo Steinke Deconto
+            Diogo Eduardo
         </p>
     </footer>
 </body>
