--- a/EcommerceEcoville/Views/Usuario/Cadastrar.cshtml
+++ b/EcommerceEcoville/Views/Usuario/Cadastrar.cshtml
@@ -11,7 +11,7 @@
                 <input type="submit" class="btn btn-outline-success" value="Buscar" asp-action="BuscarCep" asp-controller="Usuario" />
                 <span asp-validation-for="Endereco.Cep" class="text-primary"></span>
             </div>
-            
+
             <div class="form-group" id="Cep">
                 <label asp-for="Endereco.Logradouro"></label>
                 <input type="text" asp-for="Endereco.Logradouro" class="form-control" />
@@ -37,6 +37,27 @@
                 <input type="text" asp-for="Endereco.Numero" class="form-control" />
                 <span asp-validation-for="Endereco.Numero" class="text-primary"></span>
             </div>
+        </fieldset>
+
+        <fieldset>
+            <legend>Dados do Usuário</legend>
+            <div asp-validation-summary="ModelOnly" class="text-primary"></div>
+            <div class="form-group" id="Cep">
+                <label asp-for="Email"></label>
+                <input type="text" asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-primary"></span>
+            </div>
+            <div class="form-group" id="Cep">
+                <label asp-for="Senha"></label>
+                <input type="password" asp-for="Senha" class="form-control" />
+                <span asp-validation-for="Senha" class="text-primary"></span>
+            </div>
+            <div class="form-group" id="Cep">
+                <label asp-for="ConfirmacaoSenha"></label>
+                <input type="password" asp-for="ConfirmacaoSenha" class="form-control" />
+                <span asp-validation-for="ConfirmacaoSenha" class="text-primary"></span>
+            </div>
+            <input type="submit" class="btn btn-outline-success" value="Cadastrar" asp-action="Cadastrar" asp-controller="Usuario" />
         </fieldset>
     </form>
 </div>
