--- a/EcommerceEcoville/Views/Produto/Detalhes.cshtml
+++ b/EcommerceEcoville/Views/Produto/Detalhes.cshtml
@@ -12,6 +12,12 @@
         <h2>Detalhes do Produto</h2>
         <hr />
 
+        <div class="form-group">
+            <div class="">
+                <img src="~/ecommerceimagens/@Model.Imagem" alt="@Model.Descricao " class="img-thumbnail" width="200" height="200" />
+            </div>
+        </div>
+
         <dl>
             <dt>
                 @Html.DisplayNameFor(model => model.Nome)
