--- a/EcommerceEcoville/Views/Shared/_Layout.cshtml
+++ b/EcommerceEcoville/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                     <a class="nav-link" asp-area="" asp-controller="Categoria" asp-action="Index">Categoria</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="Usuario" asp-action="Cadastrar">Usuario</a>
+                    <a class="nav-link" asp-area="" asp-controller="Usuario" asp-action="Index">Usuario</a>
                 </li>
             </ul>
         </div>
