--- a/EcommerceEcoville/Views/Produto/Cadastrar.cshtml
+++ b/EcommerceEcoville/Views/Produto/Cadastrar.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Produto
 
     <div class="col-md-4">
-        <form asp-action="Cadastrar" method="post">
+        <form asp-action="Cadastrar" method="post" enctype="multipart/form-data">
             <fieldset>
                 <legend>Cadastrar Produto</legend>
                 <div asp-validation-summary="ModelOnly"
@@ -29,16 +29,18 @@
                 </div>
                 <div class="form-group" id="Quantidade">
                     <label asp-for="Quantidade"></label>
-                    <input type="text" asp-for="Quantidade"
-                           class="form-control" />
-                    <span asp-validation-for="Quantidade"
-                          class="text-primary"></span>
+                    <input type="text" asp-for="Quantidade" class="form-control" />
+                    <span asp-validation-for="Quantidade" class="text-primary"></span>
                 </div>
                 <div id="Categoria" class="form-group">
                     <label>Categoria:</label>
                     <select asp-items="@ViewBag.Categorias" class="form-control" name="drpCategorias">
                         <option> -- SELECIONE -- </option>
                     </select>
+                </div>
+                <div class="form-group" id="Imagem">
+                    <label asp-for="Imagem"></label><br />
+                    <input type="file" name="fupImagem"/>
                 </div>
                 <input type="submit" class="btn btn-outline-success"
                        value="Cadastrar" />
