--- a/EcommerceEcoville/Views/Usuario/Index.cshtml
+++ b/EcommerceEcoville/Views/Usuario/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <h2>Gerenciamento de Usuarios</h2>
-<a class="btn  btn-outline-success" asp-action="Cadastrar">Cadastrar Novo</a>
+<a class="btn  btn-outline-success" asp-action="Cadastrar">Criar Novo</a>
 
 <table style="margin-bottom:15px;margin-top:15px"
        class="table table-hover table-striped">
