Carrinho de compras criado

--- a/EcommerceEcoville/Views/Produto/Alterar.cshtml
+++ b/EcommerceEcoville/Views/Produto/Alterar.cshtml
@@ -32,7 +32,7 @@
                 <input type="file" name="fupImagem" />
             </div>
         </div>
-        <input type="submit" class="btn btn-outline-success"
-               value="Salvar" />
+        <input type="submit" class="btn btn-outline-success" value="Salvar" />
+        <a asp-action="Index" class="btn btn-outline-success">Voltar para lista</a>
     </fieldset>
 </form>
